# behave-app

./: .cljfmt.edn  .dir-locals.el  .gitignore  .gitmodules  LICENSE.txt  README.md  README.org  REFACTOR.org  STARTUP.org  bb.edn  clj-align-require.el  cms-test.cljs.edn  cms.cljs.edn  deps.edn  dev.cljs.edn  figwheel-main.edn  variables_mapping.org  vms.cljs.edn  workspace.edn
.claude/skills/: vms-migrations.md  vms-query.md  vms-tools.md
.clj-kondo/: config.edn
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  clj-kondo.yml  cljfmt.yml  conveyor.yml  cucumber.yml  jar-builder.yml  jar-only.yml  jarsigner.yml  linter.yml  release.yml  sign.yml
.gitlab/merge_request_templates/: merge-request-template.md
arch/: 00_index.org  01_getting_started.org  02_building_wasm.org  03_vms_guide.org
bases/behave_components/: .gitignore  README.org  bun.lockb  css-sort-order.org  deps.edn  package-lock.json  package.json  shadow-cljs.edn
bases/behave_routing/: deps.edn
bases/datahike_store/: deps.edn
bases/datom_store/: deps.edn
behave-lib/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  flake.nix
behave-lib/include/cpp/: glue.cpp  unitResolver.cpp
behave-lib/include/cpp/emscripten/: enums.cpp  glue.cpp  wrapper.cpp
behave-lib/include/cpp/sig-adapters/: SIGBehaveRun.cpp  SIGBehaveRun.h  SIGCollections.h  SIGContain.cpp  SIGContainAdapter.cpp  SIGContainAdapter.h  SIGContainForce.cpp  SIGContainForce.h  SIGContainForceAdapter.cpp  SIGContainForceAdapter.h  SIGContainResource.cpp  SIGContainResource.h  SIGContainSim.cpp  SIGContainSim.h  SIGCrown.cpp  SIGCrown.h  SIGDiurnalROS.h  SIGFineDeadFuelMoistureTool.cpp  SIGFineDeadFuelMoistureTool.h  SIGFuelModels.cpp  SIGFuelModels.h  SIGIgnite.cpp  SIGIgnite.h  SIGMoistureScenarios.cpp  SIGMoistureScenarios.h  SIGMortality.cpp  SIGMortality.h  SIGSlopeTool.cpp  SIGSlopeTool.h  SIGSpot.cpp  SIGSpot.h  SIGString.h  SIGSurface.cpp  SIGSurface.h  SIGSurfaceEnums.h  SIGSurfaceInputEnums.h
behave-lib/include/idl/: Contain.idl  ContainAdapter.idl  ContainForce.idl  ContainForceAdapter.idl  ContainResource.idl  ContainSim.idl  areaUnits.idl  behave.idl  behaveRun.idl  behaveUnits.idl  crown.idl  crownInputs.idl  fireSize.idl  fuelModelSet.idl  ignite.idl  igniteInputs.idl  moistureScenarios.idl  mortality.idl  newext.idl  palmettoGallberry.idl  safety.idl  spot.idl  spotInputs.idl  surface.idl  surfaceFire.idl  surfaceFireReactionIntensity.idl  surfaceFuelbedIntermediates.idl  surfaceInputs.idl  surfaceTwoFuelModels.idl  westernAspen.idl  windAdjustmentFactor.idl  windSpeedUtility.idl
behave-lib/include/js/: glue.cpp  glue.js  pre.js
behave-lib/test/cpp/: testContain.cpp  testCrown.cpp  testSurface.cpp  testUtils.cpp  testUtils.h
behave-lib/test/csv/: contain.csv  crown.csv  mortality.csv
cms-exports/: SIGBehaveRun.edn  SIGContainAdapter.edn  SIGCrown.edn  SIGFineDeadFuelMoistureTool.edn  SIGIgnite.edn  SIGMoistureScenarios.edn  SIGMortality.edn  SIGSlopeTool.edn  SIGSpot.edn  SIGSurface.edn  VaporPressureDeficitCalculator.edn  dimensions.edn  relativeHumidity.edn  safeSeparationDistanceCalculator.edn  unit-enums.edn  vars_min_max.csv
components/jcef/: deps.edn
development/: add_group_variable_direction.clj  add_units.clj  burning_pile.clj  cms_import.clj  cucumber.clj  cucumber_test.clj  datomic_migrate.clj  fig_repl.clj  find_parent_entities.clj  fix_actions_conditionals.clj  help_import.clj  mortality_conditionally_set_cvs_cls.clj  mortality_conditionally_set_scorch_height.clj  nano_ids.clj  remove_low_eids.clj  results_test_baselines.edn  run_cucumber.clj  test_matrix_data.edn  user.clj  user.cljs
features/: contain-input_suppression_estimated-resource-arrival-time-and-duration.feature  contain-input_suppression_resources.feature  contain-surface-input_suppression_estimated-resource-arrival-time-and-duration.feature  contain-surface-input_suppression_resources.feature  core_conditional_scenarios.feature  crown-input_canopy-fuel.feature  crown-input_crown-fire-method.feature  crown-input_foliar-moisture.feature  crown-input_spot.feature  crown-input_spot_downwind-canopy-fuel.feature  crown-input_spot_fire-behavior.feature  crown-input_spot_torching-trees.feature  crown-surface-input_canopy-fuel.feature  crown-surface-input_crown-fire-method.feature  crown-surface-input_foliar-moisture.feature  crown-surface-input_fuel-model.feature  crown-surface-input_fuel-moisture.feature  crown-surface-input_fuel-moisture_by-size-class_10-h-fuel-moisture.feature  crown-surface-input_fuel-moisture_by-size-class_100-h-fuel-moisture.feature  crown-surface-input_fuel-moisture_by-size-class_live-woody-fuel-moisture.feature  crown-surface-input_size.feature  crown-surface-input_spot.feature  crown-surface-input_spot_fire-behavior.feature  crown-surface-input_spot_torching-trees.feature  crown-surface-input_weather.feature  crown-surface-input_weather_wind-adjustment-factor_wind-adjustment-factor.feature  crown-surface-input_weather_wind-and-slope-are_wind-direction.feature  crown-surface-input_wind-and-slope.feature  crown-surface-input_wind-and-slope_slope.feature  crown-surface-input_wind-and-slope_wind-adjustment-factor-part-01.feature  crown-surface-input_wind-and-slope_wind-adjustment-factor-part-02.feature  crown-surface-input_wind-and-slope_wind-adjustment-factor.feature  crown-surface-input_wind-and-slope_wind-and-slope-are.feature  ignite_only.feature  mortality-input_scorch.feature  mortality-input_tree-characteristics_canopy-height.feature  mortality-input_tree-characteristics_crown-ratio.feature  mortality-surface-input_scorch.feature  mortality-surface-input_scorch_fire_scorch-height.feature  mortality-surface-input_scorch_fire_surface-fire-flame-length.feature  (+42 more)
scripts/: align_requires.clj  behave.el  browser.clj  create-launcher.sh  create-shortcut.sh  cucumber_ci.clj  cucumber_run_driver.clj  cucumber_shard.clj  manage.clj  mslink.sh  run_cucumber_tests.clj  shard_server.clj  test-windows.sh
steps/: Given.clj  Then.clj  When.clj  helpers.clj  inputs.clj  outputs.clj  worksheet.clj
(+4457 files in other folders)
